<resources>
    <string name="app_name">App_Truyen</string>
    <string name="moon_tales">MoonTales</string>
    <string name="logo_desc">MoonTales logo</string>
    <string name="welcome_back">Chào mừng bạn trở lại</string>
    <string name="login_subtitle">Đăng nhập để tiếp tục</string>
    <string name="email">Email</string>
    <string name="email_placeholder">email@example.com</string>
    <string name="password">Mật khẩu</string>
    <string name="password_placeholder">Nhập mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu ?</string>
    <string name="login">Đăng nhập</string>
    <string name="or_text">Hoặc</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_prefix">Chưa có tài khoản? </string>
    <string name="sign_up_action">Đăng kí ngay</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="register_subtitle">Đăng ký để bắt đầu</string>
    <string name="full_name">Họ và tên</string>
    <string name="full_name_placeholder">Nhập họ và tên</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="confirm_password_placeholder">Nhập lại mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="back_to_login_prefix">Đã có tài khoản? </string>
    <string name="back_to_login_action">Đăng nhập</string>
    <string name="home_title">Trang chủ</string>
    <string name="top_stories">Truyện nổi bật</string>
    <string name="recommended_stories">Truyện đề cử</string>
    <string name="new_update_stories">Mới cập nhật</string>
    <string name="hot_stories">Đang hot</string>
    <string name="view_all">Xem tất cả</string>
    <string name="view_all_click_message">Đang mở danh sách đầy đủ</string>
    <string name="home_search_hint">Tìm kiếm truyện</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_library">Kho truyện</string>
    <string name="menu_search">Tìm kiếm</string>
    <string name="menu_profile">Hồ sơ</string>
    <string name="home_greeting">Xin chào Duy</string>
    <string name="home_subtitle">Hôm nay bạn muốn đọc gì?</string>
    <string name="footer_home">Trang chủ</string>
    <string name="footer_search">Tìm kiếm</string>
    <string name="search_title">Tìm truyện</string>
    <string name="search_hint">Tìm kiếm truyện theo tên hoặc tác giả...</string>
    <string name="tag_all">Tất cả</string>
    <string name="tag_fantasy">Fantasy</string>
    <string name="tag_action">Hành động</string>
    <string name="tag_romance">Tình cảm</string>
    <string name="tag_mystery">Bí ẩn</string>
    <string name="search_chapter_prefix">Chap %1$s</string>
</resources>